applications/camry/0-prerequisites.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: camry
  labels:
    name: camry
