applications/camry/object-detector-amd.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    namespace: camry
    name: object-detector-amd
    labels:
        app: object-detector-amd
        service: object-detector
        system: camry
spec:
    serviceName: object-detector
    replicas: 2
    selector:
        matchLabels:
            app: object-detector-amd
            service: object-detector
    template:
        metadata:
            labels:
                app: object-detector-amd
                service: object-detector
        spec:
            runtimeClassName: "nvidia"
            nodeSelector:
                kubernetes.io/arch: amd64
                gpu: amd
                gpu-era: contemporary
            topologySpreadConstraints:
                - maxSkew: 1
                  topologyKey: kubernetes.io/hostname
                  whenUnsatisfiable: DoNotSchedule
                  labelSelector:
                      matchLabels:
                          app: object-detector-amd
            volumes:
                - name: hdd
                  persistentVolumeClaim:
                      claimName: hdd
                      readOnly: false
            containers:
                - name: object-detector
                  image: kube-registry:5000/camry-object-detector:amd
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 7070
                  volumeMounts:
                      - name: hdd
                        subPath: media
                        mountPath: /srv/media
