applications/camry/object-detector.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: camry
  name: object-detector
  labels:
    app: object-detector
    service: object-detector
spec:
  serviceName: object-detector
  replicas: 3
  selector:
    matchLabels:
      app: object-detector
      service: object-detector
  template:
    metadata:
      labels:
        app: object-detector
        service: object-detector
    spec:
      nodeSelector:
        gpu: nvidia
        gpu-era: contemporary
        kubernetes.io/hostname: adonis
      runtimeClassName: "nvidia"
      volumes:
        - name: hdd
          persistentVolumeClaim:
            claimName: hdd
            readOnly: false
      containers:
        - name: object-detector
          image: kube-registry:5000/camry-object-detector:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 7070
          volumeMounts:
            - name: hdd
              subPath: media
              mountPath: /srv/media
          resources:
            requests:
              memory: "5120m"
              # cpu: "1000m"
            limits:
              memory: "5120m"
              # cpu: "1000m"
