applications/camry/segment-producer.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: camry
  name: segment-producer
  labels:
    app: segment-producer
    service: segment-producer
spec:
  serviceName: segment-producer
  replicas: 3
  selector:
    matchLabels:
      app: segment-producer
      service: segment-producer
  template:
    metadata:
      labels:
        app: segment-producer
        service: segment-producer
    spec:
      volumes:
        - name: hdd
          persistentVolumeClaim:
            claimName: hdd
            readOnly: false
      containers:
        - name: segment-producer
          image: kube-registry:5000/camry-segment-producer:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 7070
          volumeMounts:
            - name: hdd
              subPath: media
              mountPath: /srv/media
          resources:
            requests:
              memory: "2048Mi"
              cpu: "1000m"
            limits:
              memory: "2048Mi"
              cpu: "1000m"
